--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ POSTHOG_API_KEY="dummy_posthog_key"
 OPENROUTER_API_KEY="dummy_openrouter_key"
 REQUESTY_API_KEY="dummy_requesty_key"
 LOCALAI_API_KEY="dummy_localai_key"
+
+# GITHUB_TOKEN=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
